<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".fragments.SettingsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/settingsTopBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/search_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/settingsToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            app:navigationIcon="@drawable/ic_arrow_back">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/rubik_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/settings_title"
                android:textColor="@color/main_text_color"
                android:textSize="32sp" />
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/search_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsTopBarLayout">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/rubik_semi_bold"
            android:text="@string/application_theme_title"
            android:textColor="@color/main_text_color"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingsTopBarLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/settingsDarkThemeImageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:background="@color/button_background"
                android:src="@drawable/im_dark_theme"
                app:contentPadding="2dp"
                app:layout_constraintDimensionRatio="H, 1:1.3"
                app:layout_constraintEnd_toStartOf="@+id/settingsLightThemeImageView"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/RoundedImageView" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/settingsLightThemeImageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/button_background"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/im_light_theme"
                app:contentPadding="2dp"
                app:layout_constraintDimensionRatio="H, 1:1.3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/settingsDarkThemeImageView"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/RoundedImageView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:id="@+id/settings_language_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/search_background"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginVertical="8dp"
                android:src="@drawable/ic_translation"
                android:contentDescription="@null" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/rubik_semi_bold"
                android:text="@string/application_language_title"
                android:textColor="@color/main_text_color"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/settingsLanguageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_medium"
                android:includeFontPadding="false"
                tools:text="English"
                android:textColor="@color/settings_selected_text_color"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingsCurrencyContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/search_background"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginVertical="8dp"
                android:src="@drawable/ic_currency"
                android:contentDescription="@null" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/rubik_semi_bold"
                android:text="@string/main_currency_title"
                android:textColor="@color/main_text_color"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/settingsCurrencyCodeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_medium"
                android:includeFontPadding="false"
                tools:text="USD"
                android:textColor="@color/settings_selected_text_color"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/search_background"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/rubik_semi_bold"
            android:gravity="center"
            android:text="@string/application_developer_and_designer_title"
            android:textColor="@color/main_text_color"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_medium"
                    android:includeFontPadding="false"
                    android:text="@string/developer_title"
                    android:textColor="@color/main_text_color"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/settingsGithubButton"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/item_icon_button_background"
                    android:src="@drawable/ic_github"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_regular"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/developer_name"
                    android:textColor="@color/main_text_color"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_medium"
                    android:includeFontPadding="false"
                    android:text="@string/designer_title"
                    android:textColor="@color/main_text_color"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/settingsDribbleButton"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/item_icon_button_background"
                    android:src="@drawable/ic_dribble"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_regular"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/designer_name"
                    android:textColor="@color/main_text_color"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>