<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".fragments.CoinInfoFragment">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/coinInfoBackButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:background="@drawable/item_icon_button_background"
        android:src="@drawable/ic_arrow_back"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <LinearLayout
        android:id="@+id/coinInfoCollapsedLogoContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/coinInfoBackButton"
        app:layout_constraintEnd_toStartOf="@+id/coinInfoFavButton"
        app:layout_constraintStart_toEndOf="@+id/coinInfoBackButton"
        app:layout_constraintTop_toTopOf="@+id/coinInfoBackButton"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/coinInfoCollapsedLogoImageView"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/coinInfoCollapsedNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_semi_bold"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:text="Bitcoin" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/coinInfoFavButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:background="@drawable/item_icon_button_background"
        android:src="@drawable/ic_favorite_filled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/coinInfoLogoImageView"
        android:layout_width="148dp"
        android:layout_height="148dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/coinInfoLogoImageView"
        app:layout_constraintStart_toStartOf="@+id/coinInfoLogoImageView"
        app:layout_constraintTop_toBottomOf="@+id/coinInfoLogoImageView">

        <TextView
            android:id="@+id/coinInfoNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_bold"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            android:textSize="40sp"
            tools:text="Bitcoin" />

        <TextView
            android:id="@+id/coinInfoSymbolTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_regular"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:text="BTC" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/collapsedContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_background"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/coinInfoCollapseButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="12dp"
            android:background="@drawable/item_icon_button_background"
            android:src="@drawable/ic_close"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/collapsedLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/coinInfoPriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/outfit_medium"
                android:includeFontPadding="false"
                android:textColor="@color/white"
                android:textSize="36sp"
                tools:text="$27,243.00" />

            <TextView
                android:id="@+id/coinInfoChangeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/outfit_regular"
                android:includeFontPadding="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:text="+$4,271 (18,55%)" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/coinInfoPriceChangeContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@color/search_background"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/collapsedLinearLayout">

            <TextView
                android:id="@+id/coinInfoMaxTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:fontFamily="@font/outfit_regular"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/ic_chart_up"
                tools:text="Today MAX: \u0024%s" />

            <TextView
                android:id="@+id/coinInfoMinTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="8dp"
                android:fontFamily="@font/outfit_regular"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/ic_chart_down"
                tools:text="Today MIN: \u0024%s" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/coinInfoShowAllButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/light_button_background"
            android:fontFamily="@font/outfit_bold"
            android:text="@string/see_chart_button"
            android:textSize="20sp"
            app:cornerRadius="4dp"
            app:layout_constraintBottom_toTopOf="@+id/coinInfoCollapsedChartView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coinInfoPriceChangeContainer" />

        <com.db.williamchart.view.LineChartView
            android:id="@+id/coinInfoCollapsedChartView"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:paddingVertical="8dp"
            app:chart_axis="none"
            app:chart_gridEffect="dotted"
            app:chart_labelsColor="#0D47A1"
            app:chart_labelsSize="10sp"
            app:chart_lineColor="@color/button_background"
            app:chart_lineThickness="2dp"
            app:chart_pointsDrawable="@drawable/ic_unselected_dot"
            app:chart_smoothLine="true"
            app:layout_constraintBottom_toTopOf="@+id/materialButtonToggleGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/materialButtonToggleGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:visibility="gone"
            app:checkedButton="@id/coinInfoOneDayButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/coinInfoOneDayButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button_background_selector"
                android:fontFamily="@font/outfit_medium"
                android:gravity="center"
                android:includeFontPadding="false"
                android:insetLeft="16dp"
                android:insetTop="0dp"
                android:insetRight="16dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                android:text="@string/button_text_1d"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:cornerRadius="0dp"
                app:strokeWidth="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/coinInfoOneWeekButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button_background_selector"
                android:fontFamily="@font/outfit_medium"
                android:gravity="center"
                android:insetLeft="16dp"
                android:insetTop="0dp"
                android:insetRight="16dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                android:text="@string/button_text_1w"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:cornerRadius="0dp"
                app:strokeWidth="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/coinInfoOneMonthButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button_background_selector"
                android:fontFamily="@font/outfit_medium"
                android:gravity="center"
                android:insetLeft="16dp"
                android:insetTop="0dp"
                android:insetRight="16dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                android:text="@string/button_text_1m"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:cornerRadius="0dp"
                app:strokeWidth="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/coinInfoThreeMonthButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button_background_selector"
                android:fontFamily="@font/outfit_medium"
                android:gravity="center"
                android:insetLeft="16dp"
                android:insetTop="0dp"
                android:insetRight="16dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                android:text="@string/button_text_3m"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:cornerRadius="0dp"
                app:strokeWidth="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/coinInfoSixMonthButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button_background_selector"
                android:fontFamily="@font/outfit_medium"
                android:gravity="center"
                android:insetLeft="16dp"
                android:insetTop="0dp"
                android:insetRight="16dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                android:text="@string/button_text_6m"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:cornerRadius="0dp"
                app:strokeWidth="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/coinInfoOneYearButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button_background_selector"
                android:fontFamily="@font/outfit_medium"
                android:gravity="center"
                android:insetLeft="16dp"
                android:insetTop="0dp"
                android:insetRight="16dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                android:text="@string/button_text_1y"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:cornerRadius="0dp"
                app:strokeWidth="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/coinInfoAllButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button_background_selector"
                android:fontFamily="@font/outfit_medium"
                android:gravity="center"
                android:insetLeft="16dp"
                android:insetTop="0dp"
                android:insetRight="16dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                android:text="@string/button_text_all"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:cornerRadius="0dp"
                app:strokeWidth="0dp" />

        </com.google.android.material.button.MaterialButtonToggleGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>